--- a/src/app/components/exams-show/exams-show.component.html
+++ b/src/app/components/exams-show/exams-show.component.html
@@ -40,9 +40,12 @@
     <table class="table table-hover">
 
       <thead>
-        <tr>
+        <tr *ngIf="currentUser.userType === 'Student'">
           <!-- <th scope="col">#</th> -->
-          <th scope="col" *ngFor ="let column of columnsToDisplay">{{column}}</th>  
+          <th scope="col" *ngFor ="let column of columnsToDisplayStudent">{{column}}</th>  
+        </tr>
+        <tr *ngIf="currentUser.userType === 'Teacher'">
+          <th scope="col" *ngFor ="let column of columnsToDisplayTeacher">{{column}}</th>  
         </tr>
       </thead>
 
@@ -52,15 +55,19 @@
           <td> {{exam.Exam}}</td>
           <td> {{exam.Type}}</td>
           <td> <span *ngIf="exam.Time">{{exam.Time}}</span><span *ngIf="!exam.Time">-</span></td>
-          <td> <span *ngIf="exam['Default Welcome Exam?']">Yes</span><span *ngIf="!exam['Default Welcome Exam?']">No</span> </td> 
-          <td>{{exam['Assigned Teacher']}}</td>
-          <td><button class="btn btn-link" style="color: 'black';text-Decoration:'none'">{{exam['Students Enrolled'].length}}</button></td> 
-          <td><button class="btn btn-link" style="color: 'black';text-Decoration:'none'">{{exam['Students Completed'].length}}</button></td>         
+          <td *ngIf="currentUser.userType === 'Teacher'"> <span *ngIf="exam['Default Welcome Exam?']">Yes</span><span *ngIf="!exam['Default Welcome Exam?']">No</span> </td> 
+          <td *ngIf="currentUser.userType === 'Teacher'">{{exam['Assigned Teacher']}}</td>
+          <td *ngIf="currentUser.userType === 'Teacher'"><button class="btn btn-link" style="color: 'black';text-Decoration:'none'">{{exam['Students Enrolled'].length}}</button></td> 
+          <td *ngIf="currentUser.userType === 'Teacher'"><button class="btn btn-link" style="color: 'black';text-Decoration:'none'">{{exam['Students Completed'].length}}</button></td>         
+          <td *ngIf="currentUser.userType === 'Student'">{{getExamResult(exam)}}</td>         
           <td>        
             <div class="example-flex-container" style="  display: flex;">
-              <button #tooltip="matTooltip" matTooltip="View exam" mat-mini-fab style="background-color:purple " aria-label="Example icon button with a delete icon" (click)="openExamDialog(exam)"><mat-icon>remove_red_eye</mat-icon></button>
-              <button #tooltip="matTooltip" matTooltip="Edit exam" mat-mini-fab style="background-color:orange " aria-label="Example icon button with a delete icon"><mat-icon>edit</mat-icon></button>
-              <button #tooltip="matTooltip" matTooltip="Delete exam"  mat-mini-fab style="background-color:red" aria-label="Example icon button with a delete icon"><mat-icon>delete</mat-icon></button>
+              <button *ngIf="currentUser.userType === 'Student' && getExamResult(exam)==='-'" #tooltip="matTooltip" matTooltip="Begin exam" mat-mini-fab style="background-color:blue " aria-label="Example icon button with a delete icon" (click)="openExamDialog(exam)"><mat-icon>play_circle_outline</mat-icon></button>
+              <button *ngIf="currentUser.userType === 'Student' && getExamResult(exam)==='Your exam is still being marked'" #tooltip="matTooltip" matTooltip="Your exam is still being marked. Click here to view or edit your answers" mat-mini-fab style="background-color:orange " aria-label="Example icon button with a delete icon" (click)="openExamDialog(exam)"><mat-icon>hourglass_full</mat-icon></button>
+              <button *ngIf="currentUser.userType === 'Student' && (getExamResult(exam)!=='Your exam is still being marked'&& getExamResult(exam)!=='-')" #tooltip="matTooltip" matTooltip="Click here to view your feedback" mat-mini-fab style="background-color:purple " aria-label="Example icon button with a delete icon" (click)="openExamDialog(exam)"><mat-icon>remove_red_eye</mat-icon></button>
+              <button *ngIf="currentUser.userType === 'Teacher'" #tooltip="matTooltip" matTooltip="View exam" mat-mini-fab style="background-color:purple " aria-label="Example icon button with a delete icon" (click)="openExamDialog(exam)"><mat-icon>remove_red_eye</mat-icon></button>
+              <button *ngIf="currentUser.userType === 'Teacher'" #tooltip="matTooltip" matTooltip="Edit exam" mat-mini-fab style="background-color:orange " aria-label="Example icon button with a delete icon"><mat-icon>edit</mat-icon></button>
+              <button *ngIf="currentUser.userType === 'Teacher'" #tooltip="matTooltip" matTooltip="Delete exam"  mat-mini-fab style="background-color:red" aria-label="Example icon button with a delete icon"><mat-icon>delete</mat-icon></button>
             </div>
           </td>         
         </tr>
@@ -68,7 +75,7 @@
     </table>
     <div class="row">
       <div class="col offset-10">
-        <button mat-raised-button color="basic" #tooltip="matTooltip" matTooltip="Create a new exam" ><mat-icon>note_add</mat-icon> Create new</button>  
+        <button *ngIf="currentUser.userType === 'Teacher'" mat-raised-button color="basic" #tooltip="matTooltip" matTooltip="Create a new exam" ><mat-icon>note_add</mat-icon> Create new</button>  
       </div>
     </div>   
   </div>  
