--- a/src/app/components/lesson-card/lesson-card.component.html
+++ b/src/app/components/lesson-card/lesson-card.component.html
@@ -1,30 +1,41 @@
 <div class = "card m-3 mb-5 shadow-lg" id="lessonCard">
+    <mat-chip-list *ngIf="page === 'classList'" style = "position:absolute; top:-5px; left:-10px" aria-label="Fish selection"><mat-chip color="accent" [selected] = "studentsEnrolled.length < classSize">Seats: {{studentsEnrolled.length}} / {{classSize}}</mat-chip></mat-chip-list>
     <div class = "row">
         <div class = "col-md-4">           
             <div class="row">
                 <img  alt="" [src]="getImageSource()"class = "d-flex justify-content-center mb-4 img-fluid mb-4 mt-3 offset-1 rounded"/>
                 <h2 class = "d-flex justify-content-center text-center mb-4 offset-1">{{teacher}}</h2>  
+                <!-- <h2 class = "d-flex justify-content-center text-center mb-4 offset-1" *ngIf="page === 'studentList'">{{student}}</h2> -->
             </div>                           
         </div>
         <div class="col-md-6 offset-1">
             <div class="card-body mb-5">
-                <h3 class="card-title mb-3 mt-3">{{lessonType}} <span *ngIf="lessonLevel?.length<2">{{lessonLevel}}</span></h3> <hr/>
+                <h3 class="card-title mb-3 mt-3">{{lessonType}} <span *ngIf="lessonLevel?.length<2">{{lessonLevel}}</span></h3><hr *ngIf="page === 'classList'"/> 
+                
                 <p class ="card-text text-muted">
                     <small>{{description}}</small>
                 </p>
-                <h4 class="card-text d-flex justify-content-end text-center">  {{lessonDate}} {{startTime}}</h4>                               
-            </div>       
-          
+                <h4 class="card-text d-flex justify-content-end text-center">  {{lessonDate}} {{startTime}}</h4>  
+                <div *ngIf="student && !teacher">
+                    <h2 *ngIf="page === 'studentList'">{{student}}</h2>
+                    <p role="listitem" class = "text-muted"><fa-icon [icon]="faEarthAmericas"> </fa-icon> {{nationality}}</p>
+                    <p role="listitem" class = "text-muted"><fa-icon [icon]="faAt"> </fa-icon>  {{email}}</p>
+                    <p role="listitem" class = "text-muted"><fa-icon [icon]="faStar"> </fa-icon> <span  *ngIf="level">{{level}}</span> <a style="text-decoration:none" href="#" *ngIf="!level"> Set level...</a></p>
+                </div>                             
+            </div> 
      
             <div class="row" style="display:flex; margin:10px;">
-                <div class="col-md-2 offset-10">
-                    <button *ngIf = "!currentUser || currentUser.userType==='Student'" mat-raised-button color="primary" (click)="openRegisterDialog()" #tooltip="matTooltip" matTooltip="Click here to secure your place in this class" ><mat-icon>person_add</mat-icon> Register</button>
+                <div class="col-md-4 offset-10" style="display: inline-block;">
+                    <button *ngIf = "(!currentUser || currentUser.userType==='Student') && !studentsEnrolled.includes(currentUser)" mat-raised-button color="primary" (click)="openRegisterDialog()" #tooltip="matTooltip" matTooltip="Click here to secure your place in this class" [disabled] ="studentsEnrolled.length >= classSize"><mat-icon *ngIf="studentsEnrolled.length < classSize">person_add</mat-icon> <span *ngIf="studentsEnrolled.length >= classSize"> CLASS FULL</span> <span *ngIf="studentsEnrolled.length < classSize && studentsEnrolled"> Register</span></button>
+                    <button *ngIf = "(!currentUser || currentUser.userType==='Student') && studentsEnrolled.includes(currentUser)" mat-raised-button  style="background-color:orange;" (click)="openRegisterDialog()" #tooltip="matTooltip" matTooltip="Click here to secure your place in this class"><mat-icon>cancel</mat-icon> Cancel Class</button>
+                    <button *ngIf="page === 'studentList'" #tooltip="matTooltip" matTooltip="Message student"  mat-mini-fab style="background-color:blue;" aria-label="Example icon button with a delete icon"><mat-icon>message</mat-icon></button>
+                    <button *ngIf="page === 'studentList'" class = "m-1" #tooltip="matTooltip" matTooltip="Edit user" mat-mini-fab style="background-color:orange;" aria-label="Example icon button with a delete icon"><mat-icon>edit</mat-icon></button>
                     <div *ngIf = "currentUser.userType==='Teacher' && currentUser.name===teacher">
                         <section style="display: table;">
                             <div class="example-button-row" style="display: table-cell;">
                                 <div class="example-flex-container" style="  display: flex; justify-content: space-between; flex-wrap: wrap;">
                                     <button class = "m-1" #tooltip="matTooltip" matTooltip="Edit your class" mat-mini-fab style="background-color:orange " aria-label="Example icon button with a delete icon"><mat-icon>edit</mat-icon></button>
-                                    <button class = "m-1" #tooltip="matTooltip" matTooltip="Delete your class"  mat-mini-fab style="background-color:red" aria-label="Example icon button with a delete icon"><mat-icon>delete</mat-icon></button>
+                                    <button class = "m-1" #tooltip="matTooltip" matTooltip="Delete your class"  mat-mini-fab style="background-color:red" aria-label="Example icon button with a delete icon"><mat-icon>delete</mat-icon></button>                                   
                                 </div>
                             </div>                    
                         </section>
