--- a/src/app/components/video-call/video-call.component.html
+++ b/src/app/components/video-call/video-call.component.html
@@ -16,16 +16,17 @@
     <div class="col-8" style="background-color:grey; color:white">
         <p class="video-desription">Local:</p>
         <div class="container">
-            <video #local_video [autoplay]="true" [muted]="true"></video>
+            <video #local_video [autoplay]="true" [muted]=!localMicOn></video>
         </div>
     </div>
     <div class="col-4" style="background-color:grey; color:white">
         <p class="video-desription">Remote:</p>
-        <video #received_video [autoplay]="true" [muted]="true"></video>
+        <video #received_video [autoplay]="true" [muted]=!localMicOn></video>
     </div>
  </div>
  <div class= "m-5" style="text-align: center; width:100%; display: flex;">
     <button class="m-3" mat-raised-button color="primary">Start call</button>
     <button class="m-3" mat-raised-button [color]="localVideoOn ? 'primary' : 'accent'" (click)= stopStartLocalVideo()> <fa-icon [icon]="localVideoOn ? faVideo : faVideoSlash"></fa-icon></button>
+    <button class="m-3" mat-raised-button [color]="localMicOn ? 'primary' : 'accent'" (click)= muteUnmuteLocalMic()> <fa-icon [icon]="localMicOn ? faMicrophone : faMicrophoneSlash"></fa-icon></button>
     <button class="m-3"mat-raised-button color="primary">End call</button>
  </div>
