--- a/src/app/components/general-dialog/general-dialog.component.html
+++ b/src/app/components/general-dialog/general-dialog.component.html
@@ -13,6 +13,6 @@
     <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>{{data.leftButton}}</button>
     <!-- <button mat-raised-button color="primary" [mat-dialog-close]="true" cdkFocusInitial><mat-icon *ngIf="data.icon">{{data.icon}}</mat-icon> {{data.rightButton}}</button> -->
-    <button mat-raised-button color="primary" [mat-dialog-close]="true" cdkFocusInitial [routerLink]="data.routerLink">{{data.rightButton}}</button>
+    <button mat-raised-button color="primary" [mat-dialog-close]="data.result || true" cdkFocusInitial [routerLink]="data.routerLink">{{data.rightButton}}</button>
     </mat-dialog-actions>
 </div>
