--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="card text-dark bg-white mb-3 mt-4 mr-3 pb-2 pt-2 shadow" style="border-radius: 15px;">
-    <h1 class="display-1 text-center text-primary" > Class-E </h1> 
-    <h2 class="text-center text-primary">Online English Classes and Courses</h2>  
+    <h1 class="display-1 text-center text-primary m-3" style="font-size: 50px;"> Class-E-Mate </h1> 
+    <h2 class="text-center text-primary">Online English Classes, Courses and Exams</h2>  
 </div>
