--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -5,3 +5,31 @@
     transform: scale(1.1);
     transition: transform 0.5s;
 }
+
+#lessonTypeLongNameFilter, #lessonTypeShortNameFilte{
+    transition: ease all .5s;
+}
+
+@media (max-width: 991px){
+    #lessonTypeLongNameFilter{
+        display:none !important;
+    }  
+}
+
+@media (min-width: 992px){
+    #lessonTypeShortNameFilter{
+        display:none !important;
+    }  
+}
+
+@media (max-width: 776px){
+    #lessonTypeShortNameFilter{
+        transform:scale(0.8);
+    }  
+}
+
+@media (max-width: 521px){
+    #lessonTypeShortNameFilter{
+        transform:scale(0.5);
+    }  
+}
